--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 
                 <section class="experience section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Work Experience</h2>
+                        <!-- Add work experience here heading below -->
+                        <h2 class="heading"> </h2>
                         <div class="content">
                             <div class="item">
 
@@ -228,7 +229,8 @@
                 </section><!--//section-->
                 <section class="github section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">My GitHub</h2>
+                        <!-- add My Github title to the tag below -->
+                        <h2 class="heading"> </h2>
                         <!-- <p>You can embed your GitHub contribution graph calendar using IonicaBizau's <a href="#" target="_blank">GitHub Calendar</a> widget.  -->
                         
                          <!-- short version of this  -->
