updated html with a new link

--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span><a href="https://www.google.com/maps/place/Kansas+City,+KS/@39.1231511,-94.8885102,11z/data=!3m1!4b1!4m5!3m4!1s0x87c08ce427cf3515:0xdc77777b70c31e05!8m2!3d39.1155314!4d-94.6267873"></a>  Kansas City, USA</li>
                                 <!-- TODO: Need to fix your email link to be similar to your Contact Me button -->
-                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#"> polina.holland@gmail.com</a></li>
+                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto: polina.holland@gmail.com"> polina.holland@gmail.com</a></li>
+                                
+                           
                                 <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#"> mywebsitename.com</a></li>
                             </ul>
                         </div><!--//content-->  
