--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Data Analytics Developer with a degree in Computer Science, a background in engineering, project management, and health. Experienced in generating reports and analyzing data for internal planning and reporting purposes. Over 15 years of experience in developing strategies to design, develop, deploy, and maintain processes and projects.</p>
+                            <p>Data Analytics Developer with a degree in Computer Science, a background in engineering and project management. Experienced in generating reports and analyzing data for internal planning and reporting purposes. Over 15 years of experience in developing strategies to design, develop, deploy, and maintain processes and projects.</p>
                                 
                             <p>As a professional who is constantly searching for how to do various new things and looking for ways to apply programming and data analytics skills, I see my role to help other people and prioritize their work by using data and to create the best possible user experience.
                                 I enjoy puzzles that use different parts of my brain and sports.</p>
